[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
sea-orm = { version = "0.11.2", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ] }
entity = { path = "../entity" }
serde = { version = "1.0", features = ["derive"] }
